# BITHumanoid

./: CMakeLists.txt  package.xml
module/: alias.yaml  module.yaml
mujoco/: bit_humanoid.xml  bit_humanoid.xml.bk  bit_humanoid.yaml
rsdf/: LeftHand.rsdf  RightHand.rsdf
urdf/: bit_humanoid.bk  bit_humanoid.urdf  bit_humanoid.xml
